# horiapi

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  conanfile.py
include/horiapi/: horiapi.h
src/hori/: hori_yaml.c  hori_yaml.h  main.c
src/horiapi/: hori_alignof.h  hori_assert.h  hori_command.c  hori_command.h  hori_context.c  hori_context.h  hori_device.c  hori_device.h  hori_device_win32.h  hori_endian.h  hori_gamepad.c  hori_gamepad.h  hori_macros.h  hori_profile.c  hori_profile.h  hori_state.c  hori_time.h  hori_utf8.c  hori_utf8.h  hori_version.c  horiapi.c  horiapi_reset_xinput.c
src/utf8/: utf8.h
tests/: CMakeLists.txt
tests/horiapi/: CMakeLists.txt  hori_internal_parse_firmware_version_tests.c  hori_internal_parse_version_number_tests.c  main.c  tests.h
